# CryptoChat

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
clients/android/: README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
clients/android/app/: build.gradle.kts
clients/android/app/src/main/: AndroidManifest.xml
clients/android/app/src/main/java/com/cryptochat/app/: MainActivity.kt
clients/android/app/src/main/res/layout/: activity_main.xml
clients/android/gradle/wrapper/: gradle-wrapper.properties
clients/android/node/: build.gradle.kts
clients/android/node/src/main/: AndroidManifest.xml
clients/android/node/src/main/java/com/cryptochat/node/: Bridge.kt  NodeClient.kt
clients/windows-native/: Cargo.toml  check_output.txt  err3.txt  err4.txt  err5.txt  err6.txt  err7.txt  err8.txt  errors.txt  errors2.txt
clients/windows-native/src/: account_store.rs  app.rs  color_store.rs  conversation.rs  conversation_store.rs  emote_manager.rs  encrypted_storage.rs  group_store.rs  keystore.rs  keystore_init.txt  main.rs  network.rs  qr_exchange.rs  request_store.rs  theme.rs
clients/windows-native/src/ui/: chat.rs  mod.rs  onboarding.rs  requests.rs  scan_qr_handler.txt
devops/: README.md
devops/scripts/: dev_check.ps1
docs/: README.md  architecture.md  security-model.md
node/: Cargo.toml  README.md
node/migrations/: 0001_init.sql
node/src/: android.rs  config.rs  lib.rs  main.rs  state.rs
node/src/messaging/: mod.rs  pipeline.rs  queue.rs
node/src/overlay/: config.rs  discovery.rs  mod.rs  runtime.rs  subscriptions.rs  transport.rs
node/src/overlay/replication/: mod.rs
node/src/routes/: echo.rs  health.rs  mod.rs
node/src/storage/: mod.rs
shared/: README.md
shared/crypto-core/: Cargo.toml
shared/crypto-core/src/: lib.rs  pgp.rs
shared/messaging/: Cargo.toml
shared/messaging/src/: lib.rs  onboarding.rs  pgp_envelope.rs  requests.rs
