[workspace]
members = [
    "node",
    "shared/crypto-core",
    "shared/messaging",
    "tests/contracts",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["CryptoChat Team"]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.8", features = ["v4", "serde"] }
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
base64 = "0.22"
