[lib]
crate-type = ["rlib", "cdylib"]

[package]
name = "cryptochat-node"
version = "0.1.0"
edition = "2021"
description = "Peer node service for CryptoChat overlay networking"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
http = "0.2"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4", features = ["util"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
libp2p = { version = "0.54", features = ["macros", "kad", "identify", "ping", "request-response", "noise", "tcp", "tokio", "relay", "autonat", "quic"] }
futures = "0.3"
sled = "0.34"
async-trait = "0.1"
bincode = "1.3"

cryptochat-crypto-core = { path = "../shared/crypto-core" }
cryptochat-messaging = { path = "../shared/messaging" }
sequoia-openpgp = { version = "1.22", default-features = false }

[dev-dependencies]
serde_json.workspace = true
tokio = { version = "1.40", features = ["macros", "rt", "rt-multi-thread"] }


[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
once_cell = "1.18"
android_logger = "0.13"
