[package]
name = "cryptochat-windows"
version = "0.1.0"
edition = "2021"
description = "CryptoChat Windows Native Client"
license = "MIT"

[[bin]]
name = "cryptochat"
path = "src/main.rs"

[dependencies]
# Modern UI Framework
iced = { version = "0.12", features = ["tokio", "image", "advanced"] }

# Windows APIs (for keystore, clipboard - not UI)
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Security_Credentials",
] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Core utilities
anyhow = "1.0"
base64 = "0.22"

# CryptoChat dependencies
cryptochat-crypto-core = { path = "../../shared/crypto-core" }
cryptochat-messaging = { path = "../../shared/messaging" }
cryptochat-node = { path = "../../node" }

# Security & Serialization
zeroize = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# QR Code
qrcode = "0.14"
image = "0.25"
rqrr = "0.7"

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Symmetric encryption for chat storage
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
rand = "0.8"
argon2 = "0.5.3"

[build-dependencies]
embed-resource = "2.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[workspace]

